--- a/src/components/cms/bnb-cms-navigation/styles.scss
+++ b/src/components/cms/bnb-cms-navigation/styles.scss
@@ -129,12 +129,14 @@
 		display: none;
 		padding: 10px 0;
 		transition-delay: 2s;
+		outline: none;
 	}
 
 	#menu-mobile bnb-button-cta,
 	#menu-mobile bnb-follow {
 		display: none;
 		margin: 50px 0;
+		outline: none;
 	}
 
 	#menuToggle input:checked ~ #menu-mobile {
@@ -175,7 +177,9 @@
 		outline: none;
 		@include slotted('bnb-icon') {
 			outline: none;
-			box-shadow: 0 0 3px 2px $grey-light;
+			@include hoverDevicesOnly {
+				box-shadow: 0 0 15px 2px $grey-light;
+			}
 		}
 	}
 
